<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:entries="@array/currency_codes"
        android:padding="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCurrencyConversionAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:hint="@string/currency_rate"
        app:boxStrokeColor="#1789DB"
        app:boxStrokeWidth="2dp"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEditCurrencyConversionAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnChooseFlag"
            style="@style/bottom_sheet_button"
            android:layout_gravity="end"
            android:text="@string/choose_flag"
            android:textAllCaps="false" />

    </LinearLayout>


    <Button
        android:id="@+id/btnAddCurrency"
        style="@style/bottom_sheet_button"
        android:layout_width="match_parent"
        android:text="@string/add_currency"
        android:textAllCaps="false" />


</LinearLayout>