<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.convertor.ConvertorFragment">

    <RelativeLayout
        android:id="@+id/rlMainCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCurrencyAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cvFlagCardTenge"
            android:layout_alignBottom="@+id/cvFlagCardTenge"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="1dp"
            android:layout_toStartOf="@+id/cvFlagCardTenge"
            app:boxStrokeColor="#1789DB"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietCurrencyAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvFlagCardTenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            card_view:cardBackgroundColor="#F5F5F5"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/ivFlagTenge"
                android:layout_width="52dp"
                android:layout_height="62dp"
                android:contentDescription="@string/currency_flag"
                android:src="@drawable/flag_kz"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCurrencyAndCountryName"
            style="@style/tvCurrencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvFlagCardTenge"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:text="@string/tenge" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCurrencyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlMainCurrency" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/add_button"
        android:contentDescription="@string/add_currency_button"
        android:src="@drawable/ic_add_currency"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddToDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/add_button"
        android:contentDescription="@string/add_currency_button"
        android:src="@drawable/ic_add_to_db"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fabAddCurrency"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>